[tool.poetry]
name = "modifying-forms-flask"
version = "0.1.0"
description = ""
authors = ["Alexander Shangin <alarriva@yandex.ru>"]
readme = "README.md"
packages = [{include = "modifying_forms_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
